src/test/deca/avecObjet/valid/class_selection_this.deca
// Description :
//    Test unitaire : this 
//
// Resultats :
//    OK

class A {
    int x;

    void f() {
        this.x = 3;
        println(this.x);
    }
}
 {
    
 }