src/test/deca/avecObjet/invalid/retour_method_asm.deca
class A {
    int f() asm("RTS");
}

class B extends A {
    float f() asm("RTS");
}